--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Avenir", "Businessweek", "Santis", "Signups", "Zuckerberg"]
+  "cSpell.words": ["Avenir", "Businessweek", "Cowen", "Ivens", "Santis", "Signups", "Zuckerberg"]
 }
