finishing the footer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["Avenir", "Businessweek", "Cowen", "Ivens", "Santis", "Signups", "Zuckerberg"]
+  "cSpell.words": [
+    "Avenir",
+    "Businessweek",
+    "Cowen",
+    "Erdogan",
+    "Ivens",
+    "Santis",
+    "Signups",
+    "Zelenskiy",
+    "Zuckerberg"
+  ]
 }
